# danp_ftp

./: CLAUDE.md  CMakeLists.txt  README.md
ci/: README.md  debug.sh  install.sh  release.sh
cmake/: DanpFtp.pc.in  DanpFtpConfig.cmake.in
example/: CMakeLists.txt  README.md  example.c  example_embedded.c
include/danp/ftp/: client.h  danp_ftp.h  server.h
include/danp_ftp/scaffold_project/: danp_ftp.h  danp_ftp_types.h
scripts/: new_module.sh
src/: danp_ftp.c  danp_ftp_client.c  danp_ftp_int.c  danp_ftp_server.c  danp_ftp_service.c
src/arch/zephyr/: danp_ftp_service_shell.c
test/: CMakeLists.txt  test_danp_ftp.c
zephyr/: CMakeLists.txt  Kconfig
